Scrollbar fixed

--- a/src/pages/Auth/Auth.scss
+++ b/src/pages/Auth/Auth.scss
@@ -59,8 +59,4 @@
     }
   }
   
-  .verify-block {
-    &__loading {
-      text-align: center;
-    }
-  }
+  
