--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -36,8 +36,10 @@
       }
     }
     &-dialogs{
+      
       height: calc(100% - 95px);
       .dialogs {
+        scrollbar-width: none;
         height: 100%;
         overflow-y: scroll;
         width: 340px;
