--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,13 +2,13 @@
 @import './variables.scss';
 
 body {
-    background-color: #f4f7fa;
-  }
+    background-color: #F7F9FB;
+}
   
-  body,
-  html,
-  #root,
-  .wrapper {
+body,
+html,
+#root,
+.wrapper {
     height: 100%;
     color: $black;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "PingFang SC",
@@ -16,15 +16,15 @@ body {
       sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 14px;
   }
-  .home {
-    height: calc(100% - 2px);
-  }
-  * {
-    outline: none;
-  }
-  .empty-box {
-    position: relative !important;
-    top: 20% !important;
-    left: 0% !important;
-  }
+.home {
+  height: calc(100% - 2px);
+}
+* {
+  outline: none;
+}
+.empty-box {
+  position: relative !important;
+  top: 20% !important;
+  left: 0% !important;
+}
 
